# teamdeck-tracker-api

./: .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  client_secret_847866067409-mtg882f38nuelpu9m8rp50mcpc8tj16d.apps.googleusercontent.com.json
src/: auth.rs  lib.rs  main.rs  project.rs  resource.rs  scalars.rs  sort_by_enum.rs  telemetry.rs  time_entry.rs  time_entry_tag.rs  timer.rs
src/auth/: google.rs  guard.rs  token.rs
src/teamdeck/: api.rs  error.rs
