[package]
name = "teamdeck-tracker-api"
version = "0.1.0"
edition = "2018"
authors = ["Arkadiusz Żmudzin <arkadiusz.zmudzin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "teamdeck_tracker_api"

[dependencies]
async-graphql = "2.9.10"
rocket = "0.5.0-rc.1"