[package]
name = "teamdeck-tracker-api"
version = "0.1.0"
edition = "2018"
authors = ["Arkadiusz Żmudzin <arkadiusz.zmudzin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "teamdeck_tracker_api"

[dependencies]
async-graphql = { version = "4", features = ["apollo_tracing"] }
async-graphql-actix-web = "4"
actix-web = { version = "4.0.1" }
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.11.9", features = ["serde_json", "json"] }
serde = { version = "1", features = ["derive"]}
thiserror = "1.0.30"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "0.5.0-beta.11"
serde_json = "1.0.66"
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
actix-cors = "0.6.1"
teamdeck = { git = "https://github.com/arkus7/teamdeck-api-client-rs" }
